[gd_scene load_steps=4 format=3 uid="uid://bkeub3wow50t6"]

[ext_resource type="FontFile" uid="uid://be2nu5as08d7p" path="res://assetts/UI/saiba-45/SAIBA-45.ttf" id="1_8aha7"]
[ext_resource type="Script" path="res://Scripts/game_over_screen.gd" id="1_dsmwv"]
[ext_resource type="AudioStream" uid="uid://bs7l5u1037gdh" path="res://assetts/audio/Music/Losttheme.wav" id="3_cgdt3"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_dsmwv")

[node name="Panel" type="Panel" parent="."]
offset_right = 404.0
offset_bottom = 514.0

[node name="RetryButton" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.497
anchor_top = 0.578
anchor_right = 0.497
anchor_bottom = 0.578
offset_left = -43.8
offset_top = -40.0
offset_right = 45.2
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_pressed_color = Color(0.819608, 0.870588, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0.890196, 0, 1)
theme_override_colors/font_pressed_color = Color(0.733333, 0.886275, 0, 1)
theme_override_fonts/font = ExtResource("1_8aha7")
text = "Retry"

[node name="QuitToDesktopButton" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.443
anchor_right = 0.5
anchor_bottom = 0.443
offset_left = -25.0
offset_top = -8.50002
offset_right = 25.0
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_pressed_color = Color(0.819608, 0.870588, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0.890196, 0, 1)
theme_override_colors/font_pressed_color = Color(0.733333, 0.886275, 0, 1)
theme_override_fonts/font = ExtResource("1_8aha7")
text = "Quit Game"

[node name="MainTitleButton" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.443
anchor_right = 0.5
anchor_bottom = 0.443
offset_left = -85.5
offset_top = 63.5
offset_right = 88.5
offset_bottom = 94.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_pressed_color = Color(0.819608, 0.870588, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0.890196, 0, 1)
theme_override_colors/font_pressed_color = Color(0.733333, 0.886275, 0, 1)
theme_override_fonts/font = ExtResource("1_8aha7")
text = "MAIN TITLE SCREEN"

[node name="GameOverLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -68.0
offset_right = 45.0
offset_bottom = -45.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_8aha7")
theme_override_font_sizes/font_size = 26
text = "Game Over"

[node name="LostMusicPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_cgdt3")
volume_db = -1.835
bus = &"Music"

[connection signal="pressed" from="RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="QuitToDesktopButton" to="." method="_on_quit_to_desktop_button_pressed"]
[connection signal="pressed" from="MainTitleButton" to="." method="_on_main_title_button_pressed"]
